<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvViewAs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_gravity="center_vertical"
        android:text="View as"
        android:textColor="@color/black"
        android:textSize="@dimen/text_regular_2x_medium"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupListType"
        android:layout_marginVertical="@dimen/margin_medium_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium_2"
        android:layout_below="@id/tvViewAs">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="List" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbLargeGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Large Grid" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbSmallGridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Small Grid" />





    </RadioGroup>


</RelativeLayout>