...
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/margin_medium_2"
    android:layout_marginHorizontal="@dimen/margin_medium_2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.thurainx.libraryapp.views.components.RoundedImageView
        android:id="@+id/ivBookListViewCover"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:cornerRadius="@dimen/margin_medium"
        app:srcCompat="@drawable/dummy_book" />

...
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/margin_medium"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBookListViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium_2"
            android:layout_marginTop="@dimen/margin_small"
            android:ellipsize="end"
            android:maxLines="2"
...
